signdrive manual trigger add new testcase

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -67,6 +67,7 @@ pendingReviewToday = Pending Review: Today
 completedtoday = Completed: Today
 RejectOfferLetterCandidate = Offer Rejected by Candidate: Today
 RejectEpfoLetter = Candidate Rejected
+PendingFormanualTrigger = Pending For Manual Trigger
 
 # Gmail Credentials
 Gmailurl = https://mail.google.com/
