17 june sme project maintenance

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -28,8 +28,8 @@ bridgeEmail = shariq.abbas@authbridge.com
 bridgeUserPassword = Test@#123!
 
 # AuthBridge Cat Role -- Credentials Raju Yadav
-catRoleUsername = raju.yadav@authbridge.com
-catRolePassword = Authbridge@223!
+catRoleUsername = shariq.abbas@authbridge.com
+catRolePassword = Test@#123!
 
 # iBridge SME Client--MOTHER DAIRY FRUIT & VEGETABLE PRIVATE LIMITED -- Credential Details
 usernameSme = sapna.chaudhary+3@authbridge.com
